welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {

	if (equalok)
		return (a <= b) && (b <= c);
	else return (a < b) && (b < c);
}
